24.08.2001	0.6.0 released <garetxe@users.sf.net>

	* 0.6.0 released, include prepare_dist.sh in the distro.

23.08.2001	capture with different bpl <garetxe@users.sf.net>

	* capture.c, tveng: Capture now accepts frames with different
	bytes per line but the same format otherwise.
	* zapping_setup_fb: Made PAM support work for me again.
	* capture.c: Correct format.pixformat set for YVU420 XV bundles.
	* zapping.spec.in, configure.in: Made stupid rpm's out there work
	fine. Now making 0.6.0 should be just running prepare_dist.sh.

22.08.2001	Overlay this page <garetxe@users.sf.net>

	* TTX mode: added the option to "overlay" the current page when
	the main window is in TTX mode.
	* ttxview: improved page selection as discussed, use the new
	pixmaps.
	* main.c, zvbi.c: Added support for aspect ratio autodetecting.
	
21.08.2001	es updated <garetxe@users.sf.net>

	* es.po: Up to date, preparation for 0.6.0 release.
	* configure.in: Cleaned up the gcc options a bit, avoid passing
	many times the same flag. Use gnome-config --prefix instead of
	ac_default_prefix.
	* src/ttxview.c: Use Michael's left, rigth arrows instead of
	<>. The rest will come later.

21.08.2001	<mschimek@users.sf.net>

	* Committed pixmaps: left, right, up, down, reveal, parrot.
	* Modified a few, um, not so clear labels (en) in the channel
	  dialog.

20.08.2001	pl updated <garetxe@users.sf.net>

	* pl.po: Updated to CVS.
	* htdocs: Added content and dropped PHP session support for
	the traditional grandma cookies.

19.08.2001	<mschimek@users.sf.net>

        * common/errstr.*: Added. libvbi/export and v4lx first victims.
	* zvbi.c: page event change broke TTX and CC subtitles, fixed.
	* caption.c: Corrected a channel switch bug.

18.08.2001	<mschimek@users.sf.net>

        * libvbi.h, packet.c: Modified & enhanced TTX page event.
        * vbi_format_page bugs: Not pg->row = display_rows; Wrote
	  glyph 0 instead of 0x20 in 41st column; Didn't write spacing